Bug 424490 - Useless 'Defaults', 'Reset',, and 'Apply' button.
Summary: Useless 'Defaults', 'Reset',, and 'Apply' button.
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.19.3
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-20 23:25 UTC by gregorystarr00
Modified: 2020-07-23 02:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gregorystarr00 2020-07-20 23:25:14 UTC
SUMMARY
The KINFO center has numerous KCM areas such as the battery in which no options can be changed, but there are still buttons at the bottom for defaults, reset, and apply.

STEPS TO REPRODUCE
1. Open Kinfocenter
2. Go to any page besides System Information and Memory
3. Profit

OBSERVED RESULT
Buttons exist

EXPECTED RESULT
No superfluous buttons.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 
(available in About System)
Operating System: Manjaro Linux
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Kernel Version: 5.7.9-1-MANJARO
OS Type: 64-bit
Processors: 8 × Intel® Core™ i5-8265U CPU @ 1.60GHz
Memory: 7.5 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 1 Bug Janitor Service 2020-07-21 10:33:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/6
Comment 2 David Redondo 2020-07-22 06:43:41 UTC
Git commit d8483b0fd9f76933272ec7ffdd705bd2e765ea38 by David Redondo.
Committed on 22/07/2020 at 06:42.
Pushed by davidre into branch 'master'.

Also hide Buttons when changing modules in info center mode

M  +6    -0    sidebar/SidebarMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/d8483b0fd9f76933272ec7ffdd705bd2e765ea38