Also hide Buttons when changing modules in info center mode

BUG:424490